--- a/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
+++ b/src/app/pages/user-management/wholesaler/index/wholesaler-index.component.html
@@ -2,7 +2,7 @@
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Daftar Wholesaler'">
     <div class="button-row" fxLayout="row">
-      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/user-management','wholesaler','create']">
+      <button *ngIf="permission?.buat" style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/user-management','wholesaler','create']">
         <mat-icon>add</mat-icon>BUAT
       </button>
       <!-- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" class="is-danger">HAPUS</button> -->
@@ -112,9 +112,9 @@
         <ngx-datatable-column [width]="68" name="Status" prop="status" headerClass="textright">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
             <div class="name-container pl-12">
-              <mat-icon *ngIf="row.status === 'A'" class="active-icon mat-green-600-bg s-18">check</mat-icon>
-              <mat-icon *ngIf="row.status === 'I'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
-              <mat-icon *ngIf="row.status === 'P'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
+              <mat-icon *ngIf="row.status === 'active'" class="active-icon mat-green-600-bg s-18">check</mat-icon>
+              <mat-icon *ngIf="row.status === 'inactive'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
+              <mat-icon *ngIf="row.status === 'not-registered'" class="active-icon mat-red-500-bg s-18">close</mat-icon>
             </div>
           </ng-template>
         </ngx-datatable-column>
