--- a/src/app/pages/user-management/retailer/create/retailer-create.component.html
+++ b/src/app/pages/user-management/retailer/create/retailer-create.component.html
@@ -209,7 +209,7 @@
 
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
-                <mat-select placeholder="Internal Classification" formControlName="InternalClassification">
+                <mat-select placeholder="Internal Classification" formControlName="InternalClassification" (selectionChange)="classificationSelectionChange($event)">
                   <mat-option *ngFor="let item of listIC" [value]="item.value">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="verticalStepperStep4.controls['InternalClassification'].hasError('required') && verticalStepperStep4.controls['InternalClassification'].touched ">
