--- a/src/app/pages/dte-automation/audience-trade-program.component.html
+++ b/src/app/pages/dte-automation/audience-trade-program.component.html
@@ -9,9 +9,12 @@
         <mat-tab label="e-Order">
           <app-eorder *ngIf="selectedTab === 0"></app-eorder>
         </mat-tab>
-        <!-- <mat-tab label="Trade Program">
-          <data-trade-program *ngIf="selectedTab === 1"></data-trade-program>
-        </mat-tab> -->
+        <mat-tab label="Digital Coupon">
+          <app-eorder *ngIf="selectedTab === 1"></app-eorder>
+        </mat-tab>
+        <mat-tab label="Referral Code">
+          <app-eorder *ngIf="selectedTab === 2"></app-eorder>
+        </mat-tab>
       </mat-tab-group>
     </div>
   </div>
