--- a/src/app/pages/dte/automation/e-order/e-order.component.html
+++ b/src/app/pages/dte/automation/e-order/e-order.component.html
@@ -1,5 +1,5 @@
 <mat-progress-bar *ngIf="showLoadingBar" class="loading-bar" mode="indeterminate"></mat-progress-bar>
-<div class="padding-top" fxLayout="column" fusePerfectScrollbar *ngIf="!onLoad">
+<div #myContainer class="padding-top" fxLayout="column" fusePerfectScrollbar *ngIf="!onLoad">
   <div class="page-layout simple fullwidth">
     <div class="table-wrapper" style="padding: 15px">
       <div class="ayo-middle pt-10" fxLayout="column">
@@ -134,8 +134,8 @@
         </button>
       </div>
       <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator"></mat-progress-bar>
-      <!-- <ngx-datatable class="material" [rows]="rows" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
-        [rowHeight]="'auto'" [reorderable]="reorderable" [selected]="selected"
+      <ngx-datatable class="material" [rows]="rows" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
+        [rowHeight]="'auto'" [reorderable]="reorderable" [selected]="selectedRows"
         [selectionType]="formEOrder.get('type').value !== 'pick-all' ? 'checkbox' : ''" [count]="pagination.total"
         [limit]="pagination.per_page" [externalPaging]="true" [selectAllRowsOnPage]="false" [externalSorting]="true"
         (page)="setPage($event)" [sorts]="[{prop: 'name', dir: 'asc'}]" (select)="onSelect($event)"
@@ -163,43 +163,62 @@
         <ngx-datatable-column name="Kode Divisi" prop="division_code" [sortable]="false"></ngx-datatable-column>
         <ngx-datatable-column name="Wilayah" prop="region_code" [sortable]="false"></ngx-datatable-column>
         <ngx-datatable-column name="Area" prop="area_code" [sortable]="false"></ngx-datatable-column>
-      </ngx-datatable> -->
+      </ngx-datatable>
     </div>
-    <div class="table-wrapper" style="padding: 15px;">
+    <div class="table-wrapper" style="padding: 15px;" [formGroup]="formTemp">
       <h3 class="text-bold">Durasi</h3>
       <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
         <mat-form-field fxFlex="45%" class="is-light form-primary">
-          <input matInput [matDatepicker]="startPicker" placeholder="Tanggal Mulai">
+          <input matInput [matDatepicker]="startPicker" placeholder="Tanggal Mulai" formControlName="startDate">
           <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
           <mat-datepicker #startPicker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field fxFlex="50%" class="is-light form-primary">
-          <input matInput [matDatepicker]="endDate" placeholder="Tanggal Berakhir">
+          <input matInput [matDatepicker]="endDate" placeholder="Tanggal Berakhir" formControlName="endDate">
           <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
           <mat-datepicker #endDate></mat-datepicker>
         </mat-form-field>
       </div>
 
-      <!-- <h3 class="text-bold">Nilai Coin Reward</h3> -->
       <div fxLayout="row">
         <mat-form-field fxFlex="45%" class="is-light form-primary">
-          <input matInput type="number" placeholder="Nilai Coin Reward">
+          <input matInput type="number" placeholder="Nilai Coin Reward" formControlName="coin_reward">
         </mat-form-field>
+      </div>
+      <div fxLayout="row" *ngIf="automationType !== 'coupon'">
+        <mat-form-field fxFlex="100" class="is-light form-primary">
+          <mat-chip-list #chipList aria-label="Fruit selection">
+            <mat-chip *ngFor="let sku of skus" [selectable]="selectable" [removable]="removable"
+              (removed)="remove(sku)">
+              SKU: {{sku}}
+              <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+            </mat-chip>
+            <input #skuInput matInput placeholder="Cari SKU yang ditargetkan" [matChipInputFor]="chipList"
+              [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+              (matChipInputTokenEnd)="add($event)" [matAutocomplete]="auto" formControlName='sku'>
+          </mat-chip-list>
+        </mat-form-field>
+
+        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)" [displayWith]="displayFn">
+          <mat-option *ngIf="isLoading" class="is-loading">
+            <mat-spinner diameter="50"></mat-spinner>
+          </mat-option>
+          <ng-container *ngIf="!isLoading">
+            <mat-option *ngFor="let sku of filteredSku | async" [value]="sku">
+              <span>SKU: {{sku.sku_id}} | {{ sku.name }}</span>
+            </mat-option>
+          </ng-container>
+        </mat-autocomplete>
       </div>
       <div fxLayout="row">
         <mat-form-field fxFlex="45%" class="is-light form-primary">
-          <input matInput type="text" placeholder="SKU yang ditargetkan">
-        </mat-form-field>
-      </div>
-      <div fxLayout="row">
-        <mat-form-field fxFlex="45%" class="is-light form-primary">
-          <input matInput type="number" placeholder="Jumlah Coin Reward per Frekuensi">
+          <input matInput type="number" placeholder="Jumlah Coin Reward per Frekuensi" formControlName="coin_max">
         </mat-form-field>
       </div>
       <div fxLayout="row">
         <mat-form-field fxFlex="45" class="is-light form-primary">
-          <mat-select placeholder="Pilih Trade Program" #singleSelectTradeProgram>
+          <mat-select placeholder="Pilih Trade Program" #singleSelectTradeProgram formControlName="trade_program_id">
             <ngx-mat-select-search [formControl]="filterTradeProgram" [placeholderLabel]="'Cari Trade Program...'"
               [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'"></ngx-mat-select-search>
             <mat-option *ngFor="let item of filteredTradeProgram | async" [value]="item.id">
@@ -207,6 +226,11 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+      </div>
+      <div class="confirm pt-24 pb-24" fxLayout="row">
+        <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+          SIMPAN
+        </button>
       </div>
     </div>
   </div>
