--- a/src/app/pages/dte/automation/audience-trade-program.component.html
+++ b/src/app/pages/dte/automation/audience-trade-program.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Audience Trade Program'">
+  <page-content-header [contentTitle]="'DTE Automation'">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
